--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "test": "npx ts-node src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
   "license": "UNLICENSED",
   "devDependencies": {
     "@types/node": "^24.9.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
 }
