--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "tsc",
     "prepare": "npm run build",
-    "test": "npx ts-node src/index.ts"
+    "test": "node ./test/index.mjs"
   },
   "repository": {
     "type": "git",
