--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,11 @@
 
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
-    "module": "es2020",
+    "module": "node16",
     "target": "es2020",
     "types": [],
+    "moduleResolution": "node16",
+    "esModuleInterop": true,
     // For nodejs:
     // "lib": ["esnext"],
     // "types": ["node"],
